--- a/Project/iVIS_STM_CUBE_IDE/iVIS.ioc
+++ b/Project/iVIS_STM_CUBE_IDE/iVIS.ioc
@@ -18,7 +18,18 @@ Dma.MEMTOMEM.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataA
 Dma.Request0=MEMTOMEM
 Dma.Request1=USART2_TX
 Dma.Request2=SPI3_TX
-Dma.RequestsNb=3
+Dma.Request3=SPI2_TX
+Dma.RequestsNb=4
+Dma.SPI2_TX.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI2_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI2_TX.3.Instance=DMA1_Stream4
+Dma.SPI2_TX.3.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI2_TX.3.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_TX.3.Mode=DMA_CIRCULAR
+Dma.SPI2_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI2_TX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_TX.3.Priority=DMA_PRIORITY_LOW
+Dma.SPI2_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.SPI3_TX.2.Direction=DMA_MEMORY_TO_PERIPH
 Dma.SPI3_TX.2.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.SPI3_TX.2.Instance=DMA1_Stream5
@@ -109,6 +120,7 @@ Mcu.UserName=STM32F407VGTx
 MxCube.Version=6.10.0
 MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DMA1_Stream4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -119,6 +131,7 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SPI3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
 NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
